ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: augusiunetask.com
    http:
      paths:
        - path: /mongo-express
          pathType: Prefix
          backend:
            service:
              name: mongo-express-service
              port:
                number: 30000
